--- a/stories/story-0002/index.html
+++ b/stories/story-0002/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Daughter</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0002/ForgeDaughter.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged..club/stories/story-0002/ForgeDaughter.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -60,7 +60,7 @@
       <p>She crossed into Svartalfheim through the old river-tunnels—twisting places few dared enter anymore. Past the corpse-pits of the Blight Years, past veins of dead fungus and machines choked with rootmetal. She carried only what mattered: her father's old forge medallion, a cracked map of under-paths, and her mother's blessing folded into a rune-marked cloth.</p>
       <p>But she wasn't two days in when someone started trailing her. No footfalls, no sound—but she <em>knew</em>.</p>
       <p>On the fourth day, she stepped into an ancient rail chamber—rusted steel, great arches collapsed into blackness—and called out.</p>
-      <p>"Come out. You stink of mischief."</p>
+      <p>".clube out. You stink of mischief."</p>
       <p>A voice laughed from nowhere. "Mischief is better than fear. And you've got both, little hammer-born."</p>
       <p>Loki stepped from the dark, arms crossed, cloak flickering with oil-fire colors.</p>
       <p>She narrowed her eyes. "You helped him burn out. Don't pretend to care."</p>
@@ -106,7 +106,7 @@
       <p>"You've grown," he rasped, voice like two anvils grinding together.</p>
       <p>She nodded. "And you slept too long."</p>
       <p>He sat up. His arms shook. Not with weakness—but with rage restrained.</p>
-      <p>"Why did you come?"</p>
+      <p>"Why did you .clube?"</p>
       <p>"Because I never got to say goodbye."</p>
       <p>He stared at her—then smiled, small, broken, but real. "Then let's say something else instead."</p>
       <button class="listen-button" data-section="5">
@@ -160,7 +160,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0002/',
+        audioBaseUrl: 'https://www.dwarvenforged..club/stories/story-0002/',
         storyId: '0002',
         storyTitle: 'The Forge Daughter'
       };
