--- a/stories/story-0003/index.html
+++ b/stories/story-0003/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Trial</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0003/ForgeTrial.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0003/ForgeTrial.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -186,7 +186,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0003/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0003/',
         storyId: '0003',
         storyTitle: 'The Forge Trial'
       };
