--- a/stories/story-0005/index.html
+++ b/stories/story-0005/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Wager</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0005/ForgeWager.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0005/ForgeWager.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -223,7 +223,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0005/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0005/',
         storyId: '0005',
         storyTitle: 'The Forge Wager'
       };
