--- a/stories/story-0006/index.html
+++ b/stories/story-0006/index.html
@@ -13,7 +13,7 @@
   <div class="content-container">
     <h1>The Forge Journey</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0006/ForgeJourney.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0006/ForgeJourney.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -160,7 +160,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0006/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0006/',
         storyId: '0006',
         storyTitle: 'The Forge Journey'
       };
