--- a/stories/story-0007/index.html
+++ b/stories/story-0007/index.html
@@ -13,7 +13,7 @@
   <div class="content-container">
     <h1>The Forge Detail</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0007/ForgeDetail.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0007/ForgeDetail.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -225,7 +225,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0007/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0007/',
         storyId: '0007',
         storyTitle: 'The Forge Detail'
       };
