--- a/stories/story-0008/index.html
+++ b/stories/story-0008/index.html
@@ -13,7 +13,7 @@
   <div class="content-container">
     <h1>The Forge Chronicle</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0008/ForgeChronicle.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0008/ForgeChronicle.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -192,7 +192,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0008/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0008/',
         storyId: '0008',
         storyTitle: 'The Forge Chronicle'
       };
