--- a/stories/story-0010/index.html
+++ b/stories/story-0010/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Bond</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0010/ForgeBond.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0010/ForgeBond.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -163,7 +163,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0010/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0010/',
         storyId: '0010',
         storyTitle: 'The Forge Bond'
       };
