--- a/stories/story-0011/index.html
+++ b/stories/story-0011/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Phoenix Flame</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0011/PhoenixFlame.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0011/PhoenixFlame.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -154,7 +154,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0011/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0011/',
         storyId: '0011',
         storyTitle: 'The Phoenix Flame'
       };
