--- a/stories/story-0012/index.html
+++ b/stories/story-0012/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Memory</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0012/ForgeMemory.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0012/ForgeMemory.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -212,7 +212,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0012/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0012/',
         storyId: '0012',
         storyTitle: 'The Forge Memory'
       };
