--- a/stories/story-0004/index.html
+++ b/stories/story-0004/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Council</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-0004/ForgeCouncil.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0004/ForgeCouncil.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -189,7 +189,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0004/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0004/',
         storyId: '0004',
         storyTitle: 'The Forge Council'
       };
