--- a/stories/story-0009/index.html
+++ b/stories/story-0009/index.html
@@ -15,7 +15,7 @@
   <div class="content-container">
     <h1>The Forge Reunion</h1>
 
-<img src="https://www.dwarvenforged.com/stories/story-0009/ForgeReunion.jpg" alt="" class="story-image">
+<img src="https://www.dwarvenforged.club/stories/story-0009/ForgeReunion.jpg" alt="" class="story-image">
 
 <div class="audio-controls">
   <button id="play-pause">▶</button>
@@ -207,7 +207,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-0009/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0009/',
         storyId: '0009',
         storyTitle: 'The Forge Reunion'
       };
