--- a/stories/story-0001/index.html
+++ b/stories/story-0001/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Root Flame</h1>
     
-    <img src="https://www.dwarvenforged..club/stories/story-0001/ForgeRootFlame.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0001/ForgeRootFlame.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -33,7 +33,7 @@
       <p>There were fires beneath the fires, and Brokkr knew them all.</p>
       <p>Not just the bellows-fed flames of forgework, but older blazes—primordial ones—that pulsed deep under Svartalfheim. The kind of flame that never flickered, that remembered the making of the Nine Realms. The kind that spoke, if you listened with calloused hands.</p>
       <p>Brokkr listened.</p>
-      <p>His forge was carved into the spine of the earth itself. It had no doors, no roof, only the pulse of the root-veins of Yggdrasil and the thrum of old magic. It was not a place mortals found, though gods had .clube more than once, humbled and half-afraid. Even Odin had walked barefoot to Brokkr's anvil, asking for weapons.</p>
+      <p>His forge was carved into the spine of the earth itself. It had no doors, no roof, only the pulse of the root-veins of Yggdrasil and the thrum of old magic. It was not a place mortals found, though gods had come more than once, humbled and half-afraid. Even Odin had walked barefoot to Brokkr's anvil, asking for weapons.</p>
       <p>But this was not a tale of weapons.</p>
       <p>This was the tale of <em>seeds</em>—and the price of giving life to what the gods had left to die.</p>
       <button class="listen-button" data-section="1">
@@ -143,7 +143,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged..club/stories/story-0001/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0001/',
         storyId: '0001',
         storyTitle: 'The Forge Root Flame'
       };
