--- a/stories/shared/index.html
+++ b/stories/shared/index.html
@@ -221,10 +221,10 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="https://www.dwarvenforged.com/images/logo-small.png" alt="Dwarven Forged Logo">
+        <img src="https://www.dwarvenforged.club/images/logo-small.png" alt="Dwarven Forged Logo">
         <h1>Dwarven Forged Stories</h1>
       </div>
-      <a href="https://www.dwarvenforged.com" class="home-button">Return to Main Site</a>
+      <a href="https://www.dwarvenforged.club" class="home-button">Return to Main Site</a>
     </header>
 
     <div class="page-title">
