Local updates pushed

--- a/stories/story-0002/index.html
+++ b/stories/story-0002/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Forge Daughter</h1>
     
-    <img src="https://www.dwarvenforged..club/stories/story-0002/ForgeDaughter.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-0002/ForgeDaughter.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -160,7 +160,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged..club/stories/story-0002/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-0002/',
         storyId: '0002',
         storyTitle: 'The Forge Daughter'
       };
