Local updates pushed

--- a/stories/story-2001/index.html
+++ b/stories/story-2001/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Tattooed Seed</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2001/TattooedSeed.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2001/TattooedSeed.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -139,7 +139,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2001/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2001/',
         storyId: '2001',
         storyTitle: 'The Tattooed Seed'
       };
