--- a/stories/story-2002/index.html
+++ b/stories/story-2002/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Greenworld Envoys</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2002/GreenworldEnvoys.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2002/GreenworldEnvoys.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -155,7 +155,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2002/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2002/',
         storyId: '2002',
         storyTitle: 'The Greenworld Envoys'
       };
