--- a/stories/story-2003/index.html
+++ b/stories/story-2003/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Divine Harvest Contest</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2003/DivineHarvestContest.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2003/DivineHarvestContest.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -175,7 +175,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2003/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2003/',
         storyId: '2003',
         storyTitle: 'The Divine Harvest Contest'
       };
