--- a/stories/story-2004/index.html
+++ b/stories/story-2004/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Spore Awakening</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2004/SporeAwakening.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2004/SporeAwakening.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -185,7 +185,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2004/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2004/',
         storyId: '2004',
         storyTitle: 'The Spore Awakening'
       };
