--- a/stories/story-2005/index.html
+++ b/stories/story-2005/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Knoppr-Haeli Partnership</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2005/KnopprHaeliPartnership.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2005/KnopprHaeliPartnership.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -166,7 +166,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2005/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2005/',
         storyId: '2005',
         storyTitle: 'The Knoppr-Haeli Partnership'
       };
