--- a/stories/story-2006/index.html
+++ b/stories/story-2006/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>The Healing Grove</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2006/HealingGrove.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2006/HealingGrove.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -160,7 +160,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2006/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2006/',
         storyId: '2006',
         storyTitle: 'The Healing Grove'
       };
