--- a/stories/story-2007/index.html
+++ b/stories/story-2007/index.html
@@ -16,7 +16,7 @@
   <div class="content-container">
     <h1>Athena's Wisdom: The Balance of Growth</h1>
     
-    <img src="https://www.dwarvenforged.com/stories/story-2007/AthenasWisdom.jpg" alt="" class="story-image">
+    <img src="https://www.dwarvenforged.club/stories/story-2007/AthenasWisdom.jpg" alt="" class="story-image">
     
     <div class="audio-controls">
       <button id="play-pause">▶</button>
@@ -173,7 +173,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       // Story config
       const storyConfig = {
-        audioBaseUrl: 'https://www.dwarvenforged.com/stories/story-2007/',
+        audioBaseUrl: 'https://www.dwarvenforged.club/stories/story-2007/',
         storyId: '2007',
         storyTitle: 'Athena\'s Wisdom: The Balance of Growth'
       };
