Add navbar with BROKKR branding and Admin Login link

--- a/proposal/view.html
+++ b/proposal/view.html
@@ -355,6 +355,15 @@
 </head>
 <body>
 
+    <!-- Top Navbar -->
+    <nav style="background: #0d0d0d; padding: 12px 30px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222;">
+        <a href="./" style="color: #ffd700; text-decoration: none; font-weight: 600; font-size: 0.95rem;">BROKKR</a>
+        <div style="display: flex; gap: 20px; align-items: center;">
+            <span style="color: #666; font-size: 0.8rem;">Powered by AI-MINISTRIES</span>
+            <a href="./" style="color: #e94560; text-decoration: none; font-size: 0.85rem;">Admin Login</a>
+        </div>
+    </nav>
+
     <!-- Loading State -->
     <div id="loading-state" class="loading">
         <div class="loading-spinner"></div>
